<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/student_info_photo_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/test_icon"/>
        <TextView
            android:id="@+id/student_info_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="索德罗斯"
            android:layout_marginTop="15dp"
            android:layout_below="@id/student_info_photo_img"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_below="@id/student_info_photo_img"
            android:src="@drawable/boy_icon"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/student_info_user_name"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/student_info_teacher_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_my_teacher"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/menu_icon_more"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/student_info_course_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_my_course"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/menu_icon_more"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/student_order_history_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_order_history"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/menu_icon_more"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/student_info_protocol_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_protocol"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/menu_icon_more"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
</LinearLayout>